@@ -1,7 +1,6 @@
 version 0.9.4
 =============
 
-- document region pointers
 
 Bugs
 ====
